# Narra-Tron

./: .env.example  .gitignore  04_10_Progress_Report.md  DC Motor.stl  Dockerfile  Final Project Report.md  README.md  install-services.sh  proposal.md  pyproject.toml  requirements-ml.txt  run.sh
CameraCode/: Camera Test.py
Speaker_Code/: speaker.py  test.py
pi/: camera.py  main.py  preview.py
src/: main.py
src/CameraCode/: Camera_Feed.py  Web_Cam_Test.py
src/narratron/: api.py  config.py  models.py  pipeline.py
src/narratron/services/: ocr.py  protocol.py  tts.py
static/: style.css
systemd/: narratron-api.service  narratron-camera.service  narratron-hotspot.service
templates/: index.html
tests/: perfect_scan.txt  test_camera_loop.py  test_ocr_service.py  test_pico_handshake.py  test_pipeline.py  test_protocol_ack.py  test_speaker.py  test_tts_service.py  test_ui_endpoints.py
